fixat knapparna så de inte wrappas nånsin och fixat storleken på fonten för btn-yellow. samt fixat så hamburgermeny hamnat till höger och kortat ner bredden på dess bakgrund

--- a/MowiTajm/wwwroot/css/site.css
+++ b/MowiTajm/wwwroot/css/site.css
@@ -93,6 +93,7 @@ input {
     border-radius: 0.5rem;
     text-align: center;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .btn-navbar {
@@ -630,7 +631,7 @@ legend {
 /* ======== Grundläggande standardinställningar ======== */
 #navbar {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 #navbar ul {
@@ -664,6 +665,11 @@ legend {
 
 /* ======== Mobile-first: Små skärmar först (max 767px) ======== */
 @media (max-width: 767px) {
+
+    #navbar {
+        gap: 0.1rem;
+    }
+
     .search-result-title {
         font-size: 0.7rem;
     }
@@ -796,6 +802,7 @@ legend {
     .btn-red,
     .btn-black,
     .btn-white,
+    .btn-yellow,
     .btn-purple {
         font-size: 0.8rem;
         text-align: center;
@@ -824,6 +831,10 @@ legend {
     .navbar .container {
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    #navbar {
+        gap: 0.1rem;
     }
 
     .navbar-toggler {
@@ -862,12 +873,13 @@ legend {
         flex-direction: column;
         align-items: flex-start;
         position: absolute;
-        top: 60px;
-        left: 0;
+        top: 70px;
+        right: 0;
         background: white;
-        width: 100%;
+        width: auto;
         padding: 1rem;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        gap: 0.2rem;
     }
 
     #navbar ul {
@@ -932,3 +944,4 @@ legend {
 .navbar-search {
     margin-left: 1rem; /* Lägger till lite mellanrum mellan logotyp och sökruta */
 }
+
